# choracle

./: .gitignore  Cargo.toml  Dockerfile.enclave  README.md  flake.nix  proof.json
deploy/: README.md  build-reproducible-eif.sh  enclave-entrypoint.sh  expose-nitriding.sh  start-gvproxy.sh
patches/: nitriding-acme-private-tls.patch
src/: attestation.rs  candle.rs  crypto.rs  http.rs  lib.rs  proof.rs  prover.rs  timeutil.rs  verify.rs
terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
terraform/scripts/: choracle-bootstrap.sh.tftpl
