[package]
name = "coinbase-candle-prover"
version = "0.1.0"
edition = "2021"

[lib]
name = "coinbase_candle_prover"
path = "src/lib.rs"

[[bin]]
name = "enclave-prover"
path = "src/bin/enclave-prover.rs"

[[bin]]
name = "verify-proof"
path = "src/bin/verify-proof.rs"

[dependencies]
anyhow = "1"
aws-nitro-enclaves-nsm-api = "0.5"
base64 = "0.22"
clap = { version = "4.5", features = ["derive", "env"] }
hex = "0.4"
httparse = "1"
httpdate = "1"
nitro_attest = "0.2"
rand_core = { version = "0.6", features = ["getrandom"] }
rustls = "0.23"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting", "parsing"] }
urlencoding = "2"
webpki-roots = "1"
